autopromote/frontend.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      annotations:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: "public.ecr.aws/u2g6w7p2/eks-microservice-demo/frontend:1.0"
          imagePullPolicy: Always
          livenessProbe:
            httpGet:
              path: /ping
              port: 9000
            initialDelaySeconds: 0
            periodSeconds: 10
            timeoutSeconds: 1
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /ping
              port: 9000
            successThreshold: 3
          ports:
            - containerPort: 9000
---
apiVersion: v1
kind: Service
metadata:
  #annotations:
  # This annotation is only required if you are creating an internal facing ELB. Remove this annotation to create public facing ELB.
  #service.beta.kubernetes.io/aws-load-balancer-internal: "true"
  name: frontend
  labels:
    app: frontend
spec:
  type: NodePort
  ports:
    - name: "http"
      port: 80
      protocol: TCP
      targetPort: 9000
  selector:
    app: frontend
---
